# tauri-plugin-taurusqlite

./: Cargo.toml  README.md  package.json
src/: lib copy.rs  lib.rs  sqlite.rs
webview-dist/: index.d.ts  index.js
webview-src/: index.ts
